<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.navigation.ScanFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_scan_photo"
        android:layout_width="350dp"
        android:layout_height="375dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/iv_scan_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/foto"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_image_24"/>
    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="72dp"
        android:text="@string/gallery"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/camera_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cv_scan_photo"
        app:layout_constraintTop_toBottomOf="@+id/cv_scan_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/camera"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cv_scan_photo"
        app:layout_constraintTop_toBottomOf="@+id/cv_scan_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scan_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/scan"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/tv_guide_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/panduan_text_scan"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/scan_button"
        app:layout_constraintStart_toStartOf="@+id/scan_button"
        app:layout_constraintTop_toBottomOf="@+id/scan_button"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>