<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailTopengActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<!--    <TextView-->
<!--        android:id="@+id/tv_nama_topeng_detail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text = "TOPENG BUJUH"/>-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/App.Custom.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_circle_left"
            app:title="" />


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_scan_photo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
                        <ImageView
                            android:id="@+id/iv_detail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/foto"
                            android:scaleType="centerCrop"
                            android:src="@drawable/baseline_image_24"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_h1_deskripsi_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deskripsi"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/cv_scan_photo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cv_scan_photo"
        app:layout_constraintTop_toBottomOf="@+id/cv_scan_photo" />

    <TextView
        android:id="@+id/tv_deskripsi_detail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_h1_deskripsi_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_h1_deskripsi_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_h1_deskripsi_detail" />

    <TextView
        android:id="@+id/tv_h1_harga_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/harga_kisaran"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_deskripsi_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_deskripsi_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_detail" />

    <TextView
        android:id="@+id/tv_harga_detail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_h1_harga_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_h1_harga_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_h1_harga_detail" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>